<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteAccount">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/areYouSureDeleteAccount"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_below="@id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/confirm_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/confirmEmail"/>
        <EditText
            android:id="@+id/confirm_password"
            android:layout_below="@id/confirm_email"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirmPassword"/>
        <TextView
            android:id="@+id/warning_note"
            android:layout_below="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            android:text="@string/confirmDeleteAccountNote"/>

        <Button
            android:id="@+id/delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/warning_note"
            android:layout_margin="10dp"
            android:background="@color/btn_bg"
            android:textColor="@android:color/white"
            android:text="@string/deleteAccount"/>

    </RelativeLayout>
</RelativeLayout>