<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutUser"
    android:orientation="vertical"
    tools:showIn="@layout/activity_about_user">


    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/reluser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/usericon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:id="@+id/useremail"
                android:text="email"
                android:layout_toRightOf="@+id/usericon"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reluser"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalCountOfNotes"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/total_notes_count_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="0"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linlay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentCountOfNotes"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/current_notes_count_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="0"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/rellay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay2"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp">
            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appIdea"
                android:textSize="30sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_below="@+id/tvHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/describe"
                android:textSize="20sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rellay4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rellay3"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/delete_all_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/btn_bg"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:text="@string/deleteAllnotes"/>
            <Button
                android:id="@+id/delete_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delete_all_notes"
                android:layout_margin="10dp"
                android:background="@color/btn_bg"
                android:textColor="@android:color/white"
                android:text="@string/deleteAccount"/>
        </RelativeLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
