<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNote">

    <LinearLayout
        android:paddingBottom="16dp"
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content">



        <EditText
            android:id="@+id/new_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/typeTitle"
            android:padding="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:alpha=".3"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/new_note_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/layout_background"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/typeDesc"
            android:inputType="textMultiLine"
            android:padding="20dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/delete_note"
                    android:layout_toRightOf="@+id/save_edited_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/btn_bg"
                    android:text="@string/deleteNote"
                    android:textColor="@android:color/white"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/save_edited_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/btn_bg"
                    android:text="@string/saveNote"
                    android:textColor="@android:color/white"
                    android:layout_weight="1"/>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>

</RelativeLayout>