<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signin.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/blue_bg">

<!--            <ImageView-->
<!--                android:layout_width="77dp"-->
<!--                android:layout_height="77dp"-->
<!--               android:layout_marginTop="93dp"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:src="@drawable/logo"/>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="77dp"
               android:layout_marginTop="93dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="#FFF"
                android:textSize="35sp"/>

        </FrameLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="36.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!-- INPUT -->
            <EditText
                android:id="@+id/email_input"
                android:layout_toRightOf="@+id/username_icon"
                android:hint="@string/email"
                android:textSize="12sp"
               android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- ICON -->
            <ImageView
                android:id="@+id/username_icon"
                android:src="@drawable/email"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_marginLeft="17dp"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="12.7dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!-- INPUT -->
            <EditText
                android:id="@+id/pass_input"
                android:layout_toRightOf="@+id/icon"
                android:hint="@string/password"
                android:textSize="12sp"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:maxLength="10"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- ICON -->
            <ImageView
                android:id="@+id/icon"
                android:src="@drawable/password"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_marginLeft="17dp"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp"
            android:layout_marginTop="18.7dp"
            android:text="@string/login"
            android:background="@drawable/blue_fill__rounded_color"
            />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="13.7dp"
            android:orientation="horizontal">


            <customfonts.MyTextView_Poppins_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13.3sp"
                android:textColor="#aeaeae"
                android:gravity="center_horizontal"
                android:text="@string/or" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/blue_fill__rounded_color"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="12sp" />

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>